--- a/style.css
+++ b/style.css
@@ -73,17 +73,44 @@ section {
 }
 .products {
     display: flex;
+    flex-wrap: wrap;
     margin-left: 10%;
     margin-right: 10%;
-    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     text-align: center;
     border: 1px solid rgb(255, 0, 0);
 }
 .prod-container {
     background-color: #e0e0e0;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
     border: 1px solid rgb(0, 0, 0);
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    flex: 0 0 30%;
+}
+.th-content {
+    display: flex;
+    font-family: 'Courier New', Courier, monospace;
+}
+.th-name {
+    flex-shrink: 0;
+    padding-right: 5px;
+    margin-left: 5px;
+}
+.th-dotted {
+    flex-grow: 1;
+    flex-shrink: 1;
+    background-image: linear-gradient(to right, black 14%, rgba(255,255,255,0) 0%);
+    background-position: bottom;
+    background-size: 6px 1.5px;
+    background-repeat: repeat-x;
+    height: 16px;
+}
+.th-znach {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 100px;
+    padding-left: 5px;
+    text-align: left;
 }
