--- a/style.css
+++ b/style.css
@@ -79,15 +79,17 @@ section {
     flex-direction: row;
     justify-content: center;
     text-align: center;
-    border: 1px solid rgb(255, 0, 0);
 }
 .prod-container {
-    background-color: #e0e0e0;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    background-color: #dddddd;
     margin-left: 15px;
     margin-right: 15px;
-    border: 1px solid rgb(0, 0, 0);
     margin-bottom: 30px;
     flex: 0 0 30%;
+    border-radius: 4px;
+    border: 1px solid rgb(117, 117, 117);
 }
 .th-content {
     display: flex;
@@ -113,4 +115,15 @@ section {
     width: 100px;
     padding-left: 5px;
     text-align: left;
+}
+.products :hover {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgb(210, 255, 240);
+}
+.prod-container *:hover {
+    border: 0px;
+    border-radius: 0px;
+}
+.messengers {
 }
