--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     margin-right: 10%;
     margin-top: 15px;
     display: flex;
-    justify-content: center;
+    justify-content: right;
 }
 #nav li{
     font-weight: bold;
