--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 .header-left {
     width: 33.3333333%;
     margin-left: 10%;
+    text-align: center;
 }
 .header-center {
     width: 33.3333333%;
