--- a/style.css
+++ b/style.css
@@ -130,13 +130,14 @@ section {
 .prod-container {
     padding-top: 4px;
     padding-bottom: 4px;
-    background-color: #dddddd;
+    background-color: #f0f0f0;
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 30px;
     flex: 0 0 30%;
     border-radius: 4px;
     border: 1px solid rgb(117, 117, 117);
+    box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
 }
 .th-content {
     display: flex;
@@ -166,7 +167,7 @@ section {
 .products :hover {
     border: 1px solid black;
     border-radius: 5px;
-    background-color: rgb(199, 255, 233);
+    background-color: rgb(255, 255, 255);
 }
 .prod-container *:hover {
     border: 0px;
@@ -211,7 +212,10 @@ section {
 .messengers img{
     margin-bottom: 10px;
 }
-
+#maps iframe{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 @media screen and (max-width: 920px){
     .header {
         height: auto;
@@ -236,4 +240,23 @@ section {
         margin-right: auto;
         width: auto;
     }
+}
+@media screen and (max-width: 760px){
+    .site-footer {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 5%;
+    }
+    .footer-center,
+    .footer-left,
+    .footer-right {
+        height: auto;
+        width: auto;
+        margin-left: 5%;
+        margin-right: 5%;
+        text-align: center;
+    }
+    
 }
