--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@
     background-color: #3e3f3e;
     text-align: center;
     font-size: 0;
-    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 .header {
     height: 160px;
     display: flex;
@@ -64,11 +66,6 @@
     font-family: "Mona-Sans", sans-serif;
     font-size: 25px;
 }
-.mail {
-    font-family: "Mona-Sans", sans-serif;
-    font-size: 20px;
-    margin-top: 2px;
-}
 #nav li{
     font-weight: bold;
     display: inline-block;
@@ -101,17 +98,26 @@ section {
 .testtext{
     display: flex;
     flex-direction: row;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 .testtext p{
+    height: 320px;
     width: 70%;
+    padding: 15px;
     margin-right: 20px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
+    /* border: 1px solid rgb(117, 117, 117);; */
+    background-color: rgb(219, 255, 210);
 }
 .testtext img{   
     display:block;
-    margin:auto;
     border-radius:15px;
     -moz-border-radius:15px;
     -webkit-border-radius:15px;
+    box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
+    margin: 0 auto
 }
 .site-footer {
     display: flex;
@@ -278,13 +284,14 @@ section {
     }
     
 }
-@media screen and (max-width: 1100px){
+@media screen and (max-width: 1150px){
     .testtext{
         display: flex;
         flex-direction: column;
     }
     .testtext p{
         width: 100%;
+        height: auto;
     }
     .testtext img{
         height: auto;
