--- a/style.css
+++ b/style.css
@@ -66,6 +66,9 @@
     font-family: "Mona-Sans", sans-serif;
     font-size: 25px;
 }
+.menu {
+    margin-bottom: 0;
+}
 #nav li{
     font-weight: bold;
     display: inline-block;
@@ -90,7 +93,7 @@ h2 {
 }
 section {
     margin-right: 10%;
-    margin-left: 10%
+    margin-left: 10%;
 }
 .section-about p{
     font-family: Tahoma, Geneva, sans-serif;
@@ -99,7 +102,6 @@ section {
     display: flex;
     flex-direction: row;
     margin-top: 25px;
-    margin-bottom: 25px;
 }
 .testtext p{
     height: 320px;
@@ -240,6 +242,42 @@ section {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+/*тест галлереи*/
+.gallery {
+    margin-top: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.gallery img{
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+#slides {
+    position: relative;
+    list-style-type: none;
+    height: 100%;
+    aspect-ratio: 16 / 9;
+}
+.slide {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+.showing {
+    opacity: 1;
+    z-index: 2;
+}
+/*тест галлереи*/
 @media screen and (max-width: 920px){
     .header {
         height: auto;
