--- a/style.css
+++ b/style.css
@@ -25,12 +25,7 @@
 }
 .header-nav {
     background-color: #3e3f3e;
-    text-align: center;
-    font-size: 0;
-    margin-left: auto;
-    margin-right: auto;
 }
-
 .header {
     height: 160px;
     display: flex;
@@ -73,6 +68,17 @@
 }
 .menu {
     margin-bottom: 0;
+    padding-left: 0;
+}
+.navigation {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 0;
+    text-align: center;
+}
+#nav ul {
+    list-style-type: none;
+    overflow: hidden;
 }
 #nav li{
     font-weight: bold;
@@ -84,6 +90,7 @@
     padding-right: 30px;
     padding-left: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    width: 25%;
 }
 #nav a{
     text-decoration: none;
@@ -100,6 +107,12 @@ section {
     margin-right: 10%;
     margin-left: 10%;
 }
+.section-products {
+    font-family: Tahoma, Geneva, sans-serif;
+}
+.section-contacts {
+    font-family: Tahoma, Geneva, sans-serif;
+}
 .section-about p{
     font-family: Tahoma, Geneva, sans-serif;
 }
@@ -109,10 +122,7 @@ section {
     margin-top: 25px;
 }
 .testtext p{
-    height: 320px;
-    width: 70%;
     padding: 15px;
-    margin-right: 20px;
     border-radius: 15px;
     box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
     /* border: 1px solid rgb(117, 117, 117);; */
@@ -133,6 +143,10 @@ section {
     color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
 }
+iframe {
+    border: 2px solid #a5a5a5;
+    border-radius: 4px;
+  }
 .footer-left {
     margin-top: 12px;
     width: 33.3333333%;
@@ -169,6 +183,7 @@ section {
     border-radius: 4px;
     border: 1px solid rgb(117, 117, 117);
     box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
+    min-width: 320px;
 }
 .th-content {
     display: flex;
