--- a/style.css
+++ b/style.css
@@ -1,402 +1,295 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
 
-@font-face {
-    font-family: "Fester";  
-    src: url("../fonts/Fester-ExtraLight.otf") format("otf"); 
-    font-style: normal; 
-    font-weight: normal;
-    }
-@font-face {
-    font-family: "Mons-Sans";  
-    src: url("../fonts/Mona-Sans.ttf") format("truetype"); 
-    font-style: normal; 
-    font-weight: normal;
-    }
-.wrapper {
-    background-image: url("aaa.jpg");
-    background-size: no-repeat;
-    background-attachment: fixed;
-}
-.worktime {
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
-    font-size: 18px;
-}
-.headertext {
-    font-family: Verdana, Geneva, sans-serif;
-}
-.header-nav {
-    background-color: #3e3f3e;
-}
+.background {
+    margin-top: 0px;
+    width: 1280px;
+    height: 5815px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    display: flex;
+    flex-direction: column; /* Устанавливаем направление столбца для flex-контейнера */
+    align-items: center;
+    
+  }
+  
 .header {
+    width: 1120px;
+    height: 160px;
+    background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+  }
+  
+.slider {
+    width: 1120px;
+    height: 590px;
+    background: rgb(255, 255, 255);
+  }
+.right_side_header {
+    width: 870px;
     height: 160px;
     display: flex;
-    color:black;
-    font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
+    /* background-color: aqua; */
 }
-.header-left {
-    width: 33.3333333%;
-    margin-left: 10%;
+.line {
+    width: 1120px;
+    height: 1px;
+    background-color: #009245;
 }
-.header-center {
-    width: 33.3333333%;
-    text-align: center;
-    margin-top: 15px;
-}
-.mail a{
-    font-size: 1.3em;
-    text-decoration: none;
-}
-.mail i {
-    font-size: 1.3em;
-}
-.time{
-    line-height: 1.2;
-    text-align: left;
-    margin-left: auto;
-    margin-right: auto;
-    width: 160px;
-}
-.headertext span{
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
-    font-weight: bold;
-    font-size: 17px;
-}
-.header-right {
-    width: 33.3333333%;
-    text-align: right;
-    margin-right: 10%;
-    margin-top: 15px;
+.numbers {
+    width: 458px;
+    height: 102px;
     display: flex;
-    justify-content: right;
+    flex-direction: row;
+    align-items: center;
+    color: #FFF;
+    justify-content: center;
+    gap: 40px;
+    flex-shrink: 0;
+    /* background-color: bisque; */
 }
-.phone {
-    font-family: "Mona-Sans", sans-serif;
-    font-size: 25px;
+.number {
+    width: 209;
+    height: 45;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    gap: 10px;
+    border-radius: 10px;
+    background: #009245;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
 }
-.menu {
-    margin-bottom: 0;
-    padding: 0;
+.social {
+    width: 100%;
+    height: 102;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    gap: 35px;
+    /* background-color: aquamarine; */
+}
+.upper_header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.mail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3px;
+}
+.email {
+    color: #009245;
+    font-family: Roboto;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+    padding-bottom: 4px;
 }
 .navigation {
-    margin-left: 10%;
-    margin-right: 10%;
-    font-size: 0;
-    text-align: center;
-}
-#nav ul {
-    list-style-type: none;
-    overflow: hidden;
-    height: 40px;
+    width: 870px;
+    height: 58px;
     display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
+    justify-content: flex-end;
+    color: #009245;
+    /* background-color: chartreuse; */
 }
-#nav li{
-    font-weight: bold;
-    display: inline-block;
-    font-size: 1.2rem;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 25%;
-    
-}
-#nav li a{
-    display: block;
+#nav div a{
+    width: 217px;
+    height: 58px;
     text-decoration: none;
-    color: aliceblue;
-    width: 100%;
-    height: 60px;
-    padding-top: 15px; /*понижаем кнопки в коризонтальном меню*/
-}
-#nav li:hover {
-    background-color: #5e5f5f;
-}
-p {
-    word-wrap: break-word;
-}
-h2 {
-    text-align: center;
-    padding-bottom: 15px;
-}
-h3 {
-    text-align: center;
-}
-.pil_img {
-    width: 320;
-    height: 450;
-    image-orientation: from-image;
-}
-section {
-    margin-right: 10%;
-    margin-left: 10%;
-}
-section p {
-    padding-left: 5%;
-    padding-right: 5%;
-}
-.tab {
-    text-indent: 40px; /* класс для табуляции параграфа, <p class="tab">абзац с табуляцией</p> */
-}
-.section {
-    margin-bottom: 25px;
-}
-.section-products {
-    font-family: Tahoma, Geneva, sans-serif;
-}
-.section-contacts {
-    font-family: Tahoma, Geneva, sans-serif;
-}
-.section-about p{
-    font-family: Tahoma, Geneva, sans-serif;
-}
-.th-content {
-    font-weight: bold;
-}
-.testtext img{   
-    display:block;
-    border-radius:15px;
-    -moz-border-radius:15px;
-    -webkit-border-radius:15px;
-    box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
-    margin: 0 auto
-}
-.site-footer {
-    display: flex;
-    height: 150px;
-    background-color: #3e3f3e;
-    color: aliceblue;
-    font-family: Arial, Helvetica, sans-serif;
-}
-iframe {
-    border: 2px solid #a5a5a5;
-    border-radius: 4px;
-  }
-.footer-left {
-    margin-top: 12px;
-    width: 33.3333333%;
-    margin-left: 10%;
-}
-.footer-center {
-    margin-top: 12px;
-    width: 33.3333333%;
-    text-align: center;
-}
-.footer-right {
-    margin-top: 12px;
-    width: 33.3333333%;
-    text-align: right;
-    margin-right:  10%;
-}
-.products {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 10%;
-    margin-right: 10%;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-}
-.prod-container {
-    padding-top: 4px;
-    padding-bottom: 4px;
-    background-color: #f0f0f0;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 30px;
-    flex: 0 0 30%;
-    border-radius: 4px;
-    border: 1px solid rgb(117, 117, 117);
-    box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
-    min-width: 322px;
-}
-.th-content {
-    display: flex;
-    font-family: 'Courier New', Courier, monospace;
-}
-.th-name {
-    flex-shrink: 0;
-    padding-right: 5px;
-    margin-left: 5px;
-}
-.th-dotted {
-    flex-grow: 1;
-    flex-shrink: 1;
-    background-image: linear-gradient(to right, black 14%, rgba(255,255,255,0) 0%);
-    background-position: bottom;
-    background-size: 6px 1.5px;
-    background-repeat: repeat-x;
-    height: 16px;
-}
-.th-znach {
-    flex-grow: 0;
-    flex-shrink: 0;
-    width: auto;
-    padding-left: 5px;
-    text-align: left;
-    padding-right: 7px;
-}
-.products :hover {
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: rgb(255, 255, 255);
-}
-.prod-container *:hover {
-    border: 0px;
-    border-radius: 0px;
-}
-#about .material-icons {
-    vertical-align: middle;
-    color: #813a00;
-}
-#advantages {
-    margin-left: auto;
-    margin-right: auto;
-    width: 560px;
-}
-#advantages .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    color: rgb(7, 175, 35);
-    font-size: 45px;
-    vertical-align: middle;
-}
-#advantages li{
-    list-style-type: none;
-    margin-bottom: 15px;
-}
-#advantages ul{
-    list-style-type: none;
-    margin-top:  35px;
-    margin-bottom: 35px;
-}
-#advantages a{
+    font-family: Roboto;
     font-size: 20px;
-    margin-left: 25px;
-    vertical-align: middle;
-}
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    color: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: color 0.1s;
 
-.messengers {
+}
+#nav div:hover {
+    background-color: #009245;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition: background-color 0.3s, color 0.1s;
+}
+.menu div:hover a {
+    color: rgb(255, 255, 255); /* Цвет текста при наведении */
+}
+.slider {
+    width: 100%;
+    height: 590px;
+    /* background-color: rgb(199, 247, 188); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slider_frame {
+    height: 540px;
+    width: 962px;
+    background-color: bisque;
+    border-radius: 15px;
+}
+.head {
+    width: 100%;
+    height: 35px;
     display: flex;
     flex-direction: column;
-    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
-.messengers img{
-    margin-bottom: 10px;
+.text {
+    width: 983px;
+    color: #000;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin-bottom: 40px;
 }
-#maps iframe{
-    margin-top: 20px;
+.head_up {
+    color: #000;
+    font-family: Inter;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.pallet_price {
+    display: flex;
+    width: 1120px;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 45px 80px;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+}
+.block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.price_card {
+    width: 320px;
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.25);
+}
+.price_card img {
+    padding-bottom: 15px;
+}
+.card_discription {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 35px;
+    padding-right: 35px;
+    color: rgba(0, 0, 0, 0.70);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+.card_title {
+    text-align: center;
+    color: rgba(0, 0, 0, 0.70);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.card_title {
+    padding-bottom: 8px;
+}
+.discription_right {
+    text-align: end;
+}
+.discription_left {
+    text-align:start
+}
+.discription_left div,.discription_right div {
+    margin-bottom: 8px;
+}
+.discription_right div:nth-child(2) {
+    margin-bottom: 4px;
+}
+.green_price {
+    display: inline-block;
+    height: 29px;
+    background-color: #3AAA35;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+.green_price a {
+    color: #FFF;
+    text-align: right;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.horizon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 25px;
+    gap: 30px;
+}
+.adv_text {
+    color: #000;
+    font-family: Roboto;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+.why {
+    margin-bottom: 25px;
+}
+.wood_price_card {
+    width: 320px;
+    height: 550px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.25);
+    text-align: center;
+    padding-top: 5px;
+}
+.wood_price_card img {
+    width: 250px;
+    margin-top: 5px;
     margin-bottom: 20px;
-}
-/*тест галлереи*/
-.gallery {
-    margin-top: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-.gallery img{
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-}
-#slides {
-    position: relative;
-    list-style-type: none;
-    height: 100%;
-    aspect-ratio: 16 / 9;
-}
-.slide {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    z-index: 1;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -o-transition: opacity 1s;
-    transition: opacity 1s;
-}
-.showing {
-    opacity: 1;
-    z-index: 2;
-}
-/*тест галлереи*/
-@media screen and (max-width: 920px){
-    .header {
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-top: 5%;
-    }
-    .header-center,
-    .header-left,
-    .header-right {
-        height: auto;
-        width: auto;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-    
-}
-@media screen and (max-width: 760px){
-    .site-footer {
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-top: 5%;
-    }
-    .footer-center,
-    .footer-left,
-    .footer-right {
-        height: auto;
-        width: auto;
-        margin-left: 5%;
-        margin-right: 5%;
-        text-align: center;
-    }
-    
-}
-@media screen and (max-width: 1150px){
-    .testtext{
-        display: flex;
-        flex-direction: column;
-    }
-    .testtext p{
-        width: 100%;
-        height: auto;
-    }
-    .testtext img{
-        height: auto;
-        width: 100%;
-        max-width: 460px;
-    }
-}
-@media screen and (max-width: 1110px){
-    #nav li {
-        width: 50%;
-    }
-    
-    /* Добавляем новую строку */
-    #nav li:nth-child(odd) {
-        clear: both;
-    }
-}
-@media (max-width: 575px){
-    #advantages {
-        margin-left: auto;
-        margin-right: auto;
-        width: auto;
-    }
-    #nav li {
-        display: block; /* Изменяем на вертикальный список */
-        clear: none; /* Удаляем clear */
-        margin: 0;
-        width: 100%;
-
-    }
 }
