--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@ html, body {
 .background {
     margin-top: 0px;
     width: 1280px;
-    height: 5815px;
+    height: auto;
     background: rgb(255, 255, 255);
     position: absolute;
     display: flex;
     flex-direction: column; /* Устанавливаем направление столбца для flex-контейнера */
     align-items: center;
-    
   }
   
 .header {
@@ -36,7 +35,6 @@ html, body {
     height: 160px;
     display: flex;
     flex-direction: column;
-    /* background-color: aqua; */
 }
 .line {
     width: 1120px;
@@ -77,7 +75,7 @@ html, body {
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
-    gap: 35px;
+    gap: 20px;
     /* background-color: aquamarine; */
 }
 .upper_header {
@@ -149,7 +147,6 @@ html, body {
 .slider_frame {
     height: 540px;
     width: 962px;
-    background-color: bisque;
     border-radius: 15px;
 }
 .head {
@@ -292,4 +289,100 @@ html, body {
     width: 250px;
     margin-top: 5px;
     margin-bottom: 20px;
+}
+#cont {
+    line-height: 2.2;
+}
+.map iframe {
+    width: 1120px;
+    height: 628px;
+    border-radius: 10px;
+    border: 1px solid #000;
+    margin-bottom: 50px;
+}
+.map img {
+    width: 20px;
+    height: 20px;
+}
+.footer {
+    height: 160px;
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.footer_frame {
+    height: 160px;
+    width: 1120px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+.footer_left {
+    height: 112px;
+    width: 380px;
+}
+.footer_right {
+    height: 112px;
+    width: 380px;
+    text-align: end;
+}
+.footer_title {
+    color:#009245;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 145.187%;
+    margin-bottom: 5px;
+}
+.footer_text {
+    color:#009245;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 145.187%;
+}
+#scroll-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
+#slides {
+    position: relative;
+    list-style-type: none;
+    height: 100%;
+    /* aspect-ratio: 16 / 9; */
+    padding: 0px;
+    margin: 0px;
+}
+.slide {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+.showing {
+    opacity: 1;
+    z-index: 2;
+    border-radius: 15px;
+}
+.slider img{
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
 }
