--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html, body {
     background-color: #009245;
 }
 .numbers {
-    width: 458px;
+    width: 558px;
     height: 102px;
     display: flex;
     flex-direction: row;
@@ -88,8 +88,16 @@ html, body {
     flex-direction: row;
     align-items: center;
     gap: 3px;
+    
+}
+.email a:hover{
+    color: forestgreen;
+    text-decoration: underline;
 }
 .email {
+    padding-bottom: 4px;
+}
+.email a{
     color: #009245;
     font-family: Roboto;
     font-size: 21px;
@@ -97,7 +105,7 @@ html, body {
     font-weight: 400;
     line-height: normal;
     text-decoration-line: underline;
-    padding-bottom: 4px;
+    /* text-decoration: none; */
 }
 .navigation {
     width: 870px;
@@ -199,7 +207,7 @@ html, body {
     box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.25);
 }
 .price_card img {
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 .card_discription {
     display: flex;
@@ -222,9 +230,10 @@ html, body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: 5px;
 }
 .card_title {
-    padding-bottom: 8px;
+    padding-bottom: 3px;
 }
 .discription_right {
     text-align: end;
@@ -385,4 +394,31 @@ html, body {
     max-width: 100%;
     max-height: 100%;
     border-radius: 15px;
+}
+.slider_frame {
+    position: absolute;
+}
+  
+.slider-dots {
+    text-align: center;
+    position: relative;
+    bottom: 10px; /* Отступ снизу */
+    left: 0;
+    right: 0;
+    z-index: 3;
+    top: 42%;
+}
+  
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: #b0b0b0; /* Цвет неактивных точек */
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 5px; /* Расстояние между точками */
+    border: 2px solid #e3e3e3;
+}
+  
+.dot.active {
+    background-color: #009245; /* Зеленый цвет активной точки */
 }
